# agent-eval-kit

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: why-eval.md
examples/cost_anomaly_agent/: agent.py  generate_golden_set.py  golden_set.jsonl  run_evals.py  synthetic_data.py
examples/nl_to_sql_agent/: README.md  agent.py  golden_set.jsonl
src/agent_eval_kit/: __init__.py  cost_tracker.py  golden_set.py  harness.py  regression.py
src/agent_eval_kit/judges/: __init__.py  base.py  exact_match.py  llm_as_judge.py  numeric_tolerance.py
src/agent_eval_kit/reporters/: __init__.py  junit.py  markdown.py
tests/: test_harness.py
